Added alumni subsection skeleton.

--- a/templates/alumni-create.phtml
+++ b/templates/alumni-create.phtml
@@ -17,7 +17,9 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <link href="/media/css/dashboard.css" rel="stylesheet">
+    <link href="/media/css/dashboard.css" rel="stylesheet" />
+
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -54,16 +56,19 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/dashboard">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="/alumni">Alumni</a></li>
+            <li><a href="/dashboard">Overview</a></li>
+            <li class="active"><a href="/alumni">Alumni <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Email</a></li>
             <li><a href="#">Export / Import</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
+          <h1 class="page-header">Add new alumni record</h1>
           
           <!-- Content goes here -->
+          
+          
+          
           
         </div>
       </div>
