--- a/templates/alumni.phtml
+++ b/templates/alumni.phtml
@@ -17,7 +17,9 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <link href="/media/css/dashboard.css" rel="stylesheet">
+    <link href="/media/css/dashboard.css" rel="stylesheet" />
+
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -54,16 +56,77 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/dashboard">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="/alumni">Alumni</a></li>
+            <li><a href="/dashboard">Overview</a></li>
+            <li class="active"><a href="/alumni">Alumni <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Email</a></li>
             <li><a href="#">Export / Import</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
+          <h1 class="page-header">Alumni Section</h1>
           
           <!-- Content goes here -->
+          <div class="row">
+			<div class="col-lg-12">
+				<div class="well">
+					<div class="row">
+						<div class="col-lg-8">
+							<h2>Search</h2>
+							
+							<form class="form-inline">
+							  <div class="form-group">
+								<label for="exampleInputName2">Name</label>
+								<input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+							  </div>
+							  <div class="form-group">
+								<label for="exampleInputEmail2">Email</label>
+								<input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+							  </div>
+							  <button type="submit" class="btn btn-default">Send invitation</button>
+							</form>
+						</div>
+						<div class="col-lg-4">
+							<h2>Add new</h2>
+							
+							<a class="btn btn-primary" href="/alumni/create">Add <i class="fa fa-plus"></i></a>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+          </div>
+          
+          <div class="row">
+			<div class="col-lg-12">
+				<table class="table table-striped">
+				  <thead>
+					<tr>
+						<th>ID</th>
+						<th>Name</th>
+						<th>Email</th>
+						<th>School</th>
+						<th>Actions</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+						<td>1</td>
+						<td>Ravi Malik</td>
+						<td>ravimali@buffalo.edu</td>
+						<td>UB</td>
+						<td><a class="btn btn-primary" href="/alumni/1">View</a></td>
+					</tr>
+					<tr>
+						<td>1</td>
+						<td>Ravi Malik</td>
+						<td>ravimali@buffalo.edu</td>
+						<td>UB</td>
+						<td><a class="btn btn-primary" href="/alumni/2">View</a></td>
+					</tr>
+				  </tbody>
+				</table>
+			</div>
+          </div>
           
         </div>
       </div>
