--- a/templates/alumni-create.phtml
+++ b/templates/alumni-create.phtml
@@ -46,6 +46,7 @@
             <li><a href="/dashboard">Dashboard</a></li>
             <li><a href="/auth/register">Create Admin</a></li>
             <li><a href="/auth/login">Login</a></li>
+            <li><a href="/api/v1/logout">Logout</a></li>
           </ul>
           
         </div>
