--- a/templates/dashboard.phtml
+++ b/templates/dashboard.phtml
@@ -17,7 +17,7 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <link href="/media/css/dashboard.css" rel="stylesheet">
+    <link href="<?=Helper::url('/media/css/dashboard.css')?>" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -41,10 +41,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/auth/register">Create Admin</a></li>
-            <li><a href="/auth/login">Login</a></li>
-            <li><a href="/api/v1/logout">Logout</a></li>
+            <li><a href="<?=Helper::url('/dashboard')?>">Dashboard</a></li>
+            <li><a href="<?=Helper::url('/auth/register')?>">Create Admin</a></li>
+            <li><a href="<?=Helper::url('/auth/login')?>">Login</a></li>
+            <li><a href="<?=Helper::url('/api/v1/logout')?>">Logout</a></li>
           </ul>
           
         </div>
@@ -55,8 +55,8 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/dashboard">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="/alumni">Alumni</a></li>
+            <li class="active"><a href="<?=Helper::url('/dashboard')?>">Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="<?=Helper::url('/alumni')?>">Alumni</a></li>
             <li><a href="#">Email</a></li>
             <li><a href="#">Export / Import</a></li>
           </ul>
