--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -19,9 +19,9 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	<script src="/media/js/login.js"></script>
+	<script src="<?=Helper::url('/media/js/login.js')?>"></script>
 
-    <link href="/media/css/login.css" rel="stylesheet">
+    <link href="<?=Helper::url('/media/css/login.css')?>" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -34,7 +34,7 @@
 
     <div class="container">
 
-      <form class="form-signin" action="/api/v1/login" method="post">
+      <form class="form-signin" action="<?=Helper::url('/api/v1/login')?>" method="post">
         <h2 class="form-signin-heading">Log in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus>
