Added redirect to login.

--- a/templates/dashboard.phtml
+++ b/templates/dashboard.phtml
@@ -43,8 +43,11 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="<?=Helper::url('/dashboard')?>">Dashboard</a></li>
             <li><a href="<?=Helper::url('/auth/register')?>">Create Admin</a></li>
+            <?php if (! Helper::is_login()): ?>
             <li><a href="<?=Helper::url('/auth/login')?>">Login</a></li>
+            <?php else: ?>
             <li><a href="<?=Helper::url('/api/v1/logout')?>">Logout</a></li>
+            <?php endif; ?>
           </ul>
           
         </div>
