Alumni tabel with search added.

--- a/templates/alumni-import.phtml
+++ b/templates/alumni-import.phtml
@@ -60,10 +60,10 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="<?=Helper::url('/dashboard')?>">Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="<?=Helper::url('/dashboard')?>">Overview</a></li>
             <li><a href="<?=Helper::url('/alumni')?>">Alumni</a></li>
             <li><a href="#">Email</a></li>
-            <li><a href="<?=Helper::url('/alumni')?>">Export / Import</a></li>
+            <li class="active"><a href="<?=Helper::url('/alumni')?>">Export / Import <span class="sr-only">(current)</span></a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
