--- a/templates/alumni.phtml
+++ b/templates/alumni.phtml
@@ -19,6 +19,12 @@
 
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
+	<link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+	
+	<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+	
+	<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
+
     <link href="<?=Helper::url('/media/css/dashboard.css')?>" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -26,6 +32,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <script>
+		$(document).ready(function() {
+			$('#data_table').DataTable();
+		} );
+    </script>
+    
   </head>
 
   <body>
@@ -60,7 +73,7 @@
             <li><a href="<?=Helper::url('/dashboard')?>">Overview</a></li>
             <li class="active"><a href="<?=Helper::url('/alumni')?>">Alumni <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Email</a></li>
-            <li><a href="#">Export / Import</a></li>
+            <li><a href="<?=Helper::url('/alumni/import')?>">Export / Import</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -69,61 +82,32 @@
           <!-- Content goes here -->
           <div class="row">
 			<div class="col-lg-12">
-				<div class="well">
-					<div class="row">
-						<div class="col-lg-8">
-							<h2>Search</h2>
-							
-							<form class="form-inline">
-							  <div class="form-group">
-								<label for="exampleInputName2">Name</label>
-								<input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
-							  </div>
-							  <div class="form-group">
-								<label for="exampleInputEmail2">Email</label>
-								<input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
-							  </div>
-							  <button type="submit" class="btn btn-default">Send invitation</button>
-							</form>
-						</div>
-						<div class="col-lg-4">
-							<h2>Add new</h2>
-							
-							<a class="btn btn-primary" href="/alumni/create">Add <i class="fa fa-plus"></i></a>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-          </div>
-          
-          <div class="row">
-			<div class="col-lg-12">
-				<table class="table table-striped">
+				<table class="table table-striped" id="data_table">
 				  <thead>
 					<tr>
 						<th>ID</th>
 						<th>Name</th>
 						<th>Email</th>
 						<th>School</th>
+						<th>Degree</th>
+						<th>Major</th>
 						<th>Actions</th>
 					</tr>
 				  </thead>
 				  <tbody>
+				  <?php if ($customers->num_rows > 0): ?>
+				  <?php while ($customer = $customers->fetch_assoc()): ?>
 					<tr>
-						<td>1</td>
-						<td>Ravi Malik</td>
-						<td>ravimali@buffalo.edu</td>
-						<td>UB</td>
-						<td><a class="btn btn-primary" href="/alumni/1">View</a></td>
+						<td><?=$customer['id_customer']?></td>
+						<td><?=($customer['first_name']." ".$customer['last_name'])?></td>
+						<td><?=$customer['email']?></td>
+						<td><?=$customer['school']?></td>
+						<td><?=$customer['degree']?></td>
+						<td><?=$customer['major']?></td>
+						<td><a class="btn btn-primary" href="<?=Helper::url('/alumni/'.$customer['id_customer'])?>">View</a></td>
 					</tr>
-					<tr>
-						<td>1</td>
-						<td>Ravi Malik</td>
-						<td>ravimali@buffalo.edu</td>
-						<td>UB</td>
-						<td><a class="btn btn-primary" href="/alumni/2">View</a></td>
-					</tr>
+					<?php endwhile; ?>
+					<?php endif; ?>
 				  </tbody>
 				</table>
 			</div>
