View customer working.

--- a/templates/alumni-create.phtml
+++ b/templates/alumni-create.phtml
@@ -66,11 +66,88 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Add new alumni record</h1>
           
-          <!-- Content goes here -->
-          
-          
-          
-          
+          <div class="row">
+				<div class="col-lg-12">
+					<form action="">
+						<div class="form-group">
+							<label>First Name</label>
+							<input type="text" class="form-control" id="first_name" name="first_name"/>
+						</div>
+						<div class="form-group">
+							<label>Last Name</label>
+							<input type="text" class="form-control" id="last_name" name="last_name"/>
+						</div>
+						<div class="form-group">
+							<label>Email</label>
+							<input type="text" class="form-control" id="email" name="email"/>
+						</div>
+						<div class="form-group">
+							<label>Degree</label>
+							<input type="text" class="form-control" id="degree" name="degree"/>
+						</div>
+						<div class="form-group">
+							<label>Major</label>
+							<input type="text" class="form-control" id="major" name="major"/>
+						</div>
+						<div class="form-group">
+							<label>School</label>
+							<input type="text" class="form-control" id="school" name="school"/>
+						</div>
+						<div class="form-group">
+							<label>Type</label>
+							<select name="type" class="form-control" id="type">
+								<option val="alumni">Alumni</option>
+								<option val="current">Current</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label>Salutation</label>
+							<input type="text" class="form-control" id="salutation" name="salutation"/>
+						</div>
+						<div class="form-group">
+							<label>Preferred Mail Name</label>
+							<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"/>
+						</div>
+						<div class="form-group">
+							<label>Active</label>
+							<input type="checkbox" class="form-control" id="active" name="active"/>
+						</div>
+						<div class="form-group">
+							<label>Home Street 1</label>
+							<input type="text" class="form-control" id="home_street_1" name="home_street_1"/>
+						</div>
+						<div class="form-group">
+							<label>Home Street 2</label>
+							<input type="text" class="form-control" id="home_street_2" name="home_street_2"/>
+						</div>
+						<div class="form-group">
+							<label>Country</label>
+							<input type="text" class="form-control" id="country" name="country"/>
+						</div>
+						<div class="form-group">
+							<label>City</label>
+							<input type="text" class="form-control" id="city" name="city"/>
+						</div>
+						<div class="form-group">
+							<label>State</label>
+							<input type="text" class="form-control" id="state" name="state"/>
+						</div>
+						<div class="form-group">
+							<label>Zipcode</label>
+							<input type="text" class="form-control" id="zipcode" name="zipcode"/>
+						</div>
+						<div class="form-group">
+							<label>Home Number</label>
+							<input type="text" class="form-control" id="home_number" name="home_number"/>
+						</div>
+						<div class="form-group">
+							<label>Phone Number</label>
+							<input type="text" class="form-control" id="phone_number" name="phone_number"/>
+						</div>
+					</form>
+				</div>
+			</div>
+
         </div>
       </div>
     </div>
