--- a/templates/alumni.phtml
+++ b/templates/alumni.phtml
@@ -79,6 +79,12 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Alumni Section</h1>
           
+          <div class="row" style="margin-bottom:2%;">
+			<div class="col-lg-12">
+				<a class="btn btn-default btn-lg pull-right" href="<?=Helper::url('/alumni/create')?>">Create <i class="fa fa-plus"></i></a>
+			</div>
+          </div>
+          
           <!-- Content goes here -->
           <div class="row">
 			<div class="col-lg-12">
