--- a/templates/alumni-import.phtml
+++ b/templates/alumni-import.phtml
@@ -19,7 +19,32 @@
 
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.4.0/min/dropzone.min.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.4.0/min/dropzone.min.js"></script>
+
     <link href="<?=Helper::url('/media/css/dashboard.css')?>" rel="stylesheet" />
+    
+    <script src="<?=Helper::url('/media/js/import.js')?>" rel="stylesheet"></script>
+
+	<script>
+		Dropzone.options.filedrop = {
+		  init: function () {
+			this.on("addedfile",function () {
+			
+			});
+		  
+			this.on("error", function () {
+			
+			});
+		  
+			this.on("complete", function (file) {
+			  if (this.getUploadingFiles().length === 0 && this.getQueuedFiles().length === 0) {
+				alert("complete");
+			  }
+			});
+		  }
+		};
+	</script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -72,7 +97,18 @@
           <div class="well">
 			  <div class="row">
 				<div class="col-lg-12">
-					<form class="form-inline" action="<?=Helper::url('/alumni/import')?>" method="POST" enctype="multipart/form-data">
+					
+					
+					<i class="fa fa-spinner" id="spinner" aria-hidden="true"></i>
+
+				
+					<form action="<?=Helper::url('/api/v1/customer/import')?>" method="POST" class="dropzone" id="my-awesome-dropzone">
+						<div class="fallback">
+							<input name="file" type="file" multiple />
+						</div>
+					</form>
+				
+					<!-- form class="form-inline" action="<?=Helper::url('/api/v1/customer/import')?>" method="POST" enctype="multipart/form-data">
 						<div class="form-group col-lg-6">
 							<input type="file" class="form-control" name="file" style="width:100%;" />
 						</div>
@@ -82,7 +118,7 @@
 						<div class="form-group col-lg-3">
 							<a class="btn btn-success btn-block" href="<?=Helper::url('/alumni/export')?>">Export <i class="fa fa-external-link"></i></a>
 						</div>
-					</form>
+					</form -->
 				</div>
 			  </div>
 		  </div>
