--- a/templates/alumni-import.phtml
+++ b/templates/alumni-import.phtml
@@ -26,26 +26,6 @@
     
     <script src="<?=Helper::url('/media/js/import.js')?>" rel="stylesheet"></script>
 
-	<script>
-		Dropzone.options.filedrop = {
-		  init: function () {
-			this.on("addedfile",function () {
-			
-			});
-		  
-			this.on("error", function () {
-			
-			});
-		  
-			this.on("complete", function (file) {
-			  if (this.getUploadingFiles().length === 0 && this.getQueuedFiles().length === 0) {
-				alert("complete");
-			  }
-			});
-		  }
-		};
-	</script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -94,34 +74,24 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header">Export / Import</h1>
           
-          <div class="well">
-			  <div class="row">
-				<div class="col-lg-12">
-					
-					
-					<i class="fa fa-spinner" id="spinner" aria-hidden="true"></i>
-
-				
-					<form action="<?=Helper::url('/api/v1/customer/import')?>" method="POST" class="dropzone" id="my-awesome-dropzone">
-						<div class="fallback">
-							<input name="file" type="file" multiple />
-						</div>
-					</form>
-				
-					<!-- form class="form-inline" action="<?=Helper::url('/api/v1/customer/import')?>" method="POST" enctype="multipart/form-data">
-						<div class="form-group col-lg-6">
-							<input type="file" class="form-control" name="file" style="width:100%;" />
-						</div>
-						<div class="form-group col-lg-3">
-							<button type="submit" class="btn btn-primary btn-block">Import</button>
-						</div>
-						<div class="form-group col-lg-3">
-							<a class="btn btn-success btn-block" href="<?=Helper::url('/alumni/export')?>">Export <i class="fa fa-external-link"></i></a>
-						</div>
-					</form -->
-				</div>
-			  </div>
+          
+		  <div class="row">
+			<div class="col-lg-12">				
+				<i class="fa fa-spinner" id="spinner" aria-hidden="true"></i>
+			
+				<form action="<?=Helper::url('/api/v1/customer/import')?>" method="POST" class="dropzone" id="my-awesome-dropzone">
+					<div class="fallback">
+						<input name="file" type="file" multiple />
+					</div>
+				</form>
+			</div>
 		  </div>
+		  
+			<div class="row" style="margin-top:2%;">
+				<div class="col-lg-12">
+					<a class="btn btn-success" href="<?=Helper::url('/api/v1/customer/export')?>">Export data <i class="fa fa-file"></i></a>
+				</div>
+			</div>
           
         </div>
       </div>
