Menu tmplates created. Separated export and import.

--- a/templates/alumni-import.phtml
+++ b/templates/alumni-import.phtml
@@ -35,44 +35,17 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/dashboard">Alumni CRM</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="<?=Helper::url('/dashboard')?>">Dashboard</a></li>
-            <li><a href="<?=Helper::url('/auth/register')?>">Create Admin</a></li>
-            <?php if (! Helper::is_login()): ?>
-            <li><a href="<?=Helper::url('/auth/login')?>">Login</a></li>
-            <?php else: ?>
-            <li><a href="<?=Helper::url('/api/v1/logout')?>">Logout</a></li>
-            <?php endif; ?>
-          </ul>
-          
-        </div>
-      </div>
-    </nav>
+    <!-- Top menu -->
+    <?php include "components/top-menu.php"; ?>
 
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li><a href="<?=Helper::url('/dashboard')?>">Overview</a></li>
-            <li><a href="<?=Helper::url('/alumni')?>">Alumni</a></li>
-            <li><a href="#">Email</a></li>
-            <li class="active"><a href="<?=Helper::url('/alumni')?>">Export / Import <span class="sr-only">(current)</span></a></li>
-          </ul>
+			<!-- LHS Menu -->
+			<?php include "components/lhs-menu.php"; ?>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Export / Import</h1>
+          <h1 class="page-header">Import</h1>
           
           
 		  <div class="row">
@@ -86,12 +59,6 @@
 				</form>
 			</div>
 		  </div>
-		  
-			<div class="row" style="margin-top:2%;">
-				<div class="col-lg-12">
-					<a class="btn btn-success" href="<?=Helper::url('/api/v1/customer/export')?>">Export data <i class="fa fa-file"></i></a>
-				</div>
-			</div>
           
         </div>
       </div>
