--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -30,41 +30,14 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/dashboard">Alumni CRM</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="<?=Helper::url('/dashboard')?>">Dashboard</a></li>
-            <li><a href="<?=Helper::url('/auth/register')?>">Create Admin</a></li>
-            <?php if (! Helper::is_login()): ?>
-            <li><a href="<?=Helper::url('/auth/login')?>">Login</a></li>
-            <?php else: ?>
-            <li><a href="<?=Helper::url('/api/v1/logout')?>">Logout</a></li>
-            <?php endif; ?>
-          </ul>
-          
-        </div>
-      </div>
-    </nav>
+    <!-- Top menu -->
+    <?php include "components/top-menu.php"; ?>
 
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li><a href="<?=Helper::url('/dashboard')?>">Overview</a></li>
-            <li class="active"><a href="<?=Helper::url('/alumni')?>">Alumni <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Email</a></li>
-            <li><a href="<?=Helper::url('/alumni/import')?>">Export / Import</a></li>
-          </ul>
+			<!-- LHS Menu -->
+			<?php include "components/lhs-menu.php"; ?>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     
