--- a/templates/alumni-export.phtml
+++ b/templates/alumni-export.phtml
@@ -20,6 +20,8 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
     <link href="<?=Helper::url('/media/css/dashboard.css')?>" rel="stylesheet" />
+    
+    <script src="<?=Helper::url('/media/js/import.js')?>" rel="stylesheet"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,7 +32,7 @@
 
   <body>
 
-	<!-- Top menu -->
+    <!-- Top menu -->
     <?php include "components/top-menu.php"; ?>
 
     <div class="container-fluid">
@@ -40,9 +42,13 @@
 			<?php include "components/lhs-menu.php"; ?>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
+          <h1 class="page-header">Export</h1>
           
-          <!-- Content goes here -->
+			<div class="row" style="margin-top:2%;">
+				<div class="col-lg-12">
+					<a class="btn btn-success" href="<?=Helper::url('/api/v1/customer/export')?>">Export data <i class="fa fa-file"></i></a>
+				</div>
+			</div>
           
         </div>
       </div>
