--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -44,118 +44,157 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>" method="POST">
+						<fieldset>
+							<legend>Base Info</legend>
+							
+							<div class="row">
+								<!-- Col 1 -->
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label>First Name</label>
+										<input type="text" class="form-control" id="first_name" name="first_name"
+											value = "<?=$customer['first_name'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Email</label>
+										<input type="text" class="form-control" id="email" name="email"
+											value = "<?=$customer['email'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Major</label>
+										<input type="text" class="form-control" id="major" name="major"
+											value = "<?=$customer['major'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Type</label>
+										<select name="type" class="form-control" id="type">
+											<option val="alumni"
+												<?php if ($customer['type'] == 'alumni') echo "selected"; ?>
+											>Alumni</option>
+											<option val="current"
+												<?php if ($customer['type'] == 'current') echo "selected"; ?>
+											>Current</option>
+										</select>
+									</div>
+									<div class="form-group">
+										<label>Preferred Mail Name</label>
+										<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"
+											value = "<?=$customer['preferred_mail_name'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Home Street 1</label>
+										<input type="text" class="form-control" id="home_street_1" name="home_street_1"
+											value = "<?=$customer['home_street_1'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Home Street 2</label>
+										<input type="text" class="form-control" id="home_street_2" name="home_street_2"
+											value = "<?=$customer['home_street_2'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>State</label>
+										<input type="text" class="form-control" id="state" name="state"
+											value = "<?=$customer['state'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Zipcode</label>
+										<input type="text" class="form-control" id="zipcode" name="zipcode"
+											value = "<?=$customer['zipcode'] ?>"
+										/>
+									</div>
+									
+								</div> <!-- col-lg-6 -->
+								
+								<!-- Col 2 -->
+								<div class="col-lg-6">
+									<div class="form-group">
+										<label>Last Name</label>
+										<input type="text" class="form-control" id="last_name" name="last_name"
+											value = "<?=$customer['last_name'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Degree</label>
+										<input type="text" class="form-control" id="degree" name="degree"
+											value = "<?=$customer['degree'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>School</label>
+										<input type="text" class="form-control" id="school" name="school"
+											value = "<?=$customer['school'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Salutation</label>
+										<input type="text" class="form-control" id="salutation" name="salutation"
+											value = "<?=$customer['salutation'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Active</label>
+										<input type="checkbox" class="form-control" id="active" name="active"
+											<?php if ($customer['active']) echo "checked"; ?>
+										/>
+									</div>
+									<div class="form-group">
+										<label>Country</label>
+										<input type="text" class="form-control" id="country" name="country"
+											value = "<?=$customer['country'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>City</label>
+										<input type="text" class="form-control" id="city" name="city"
+											value = "<?=$customer['city'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Home Number</label>
+										<input type="text" class="form-control" id="home_number" name="home_number"
+											value = "<?=$customer['home_number'] ?>"
+										/>
+									</div>
+									<div class="form-group">
+										<label>Phone Number</label>
+										<input type="text" class="form-control" id="phone_number" name="phone_number"
+											value = "<?=$customer['phone_number'] ?>"
+										/>
+									</div>
+									
+								</div> <!-- col-lg-6 -->
+							</div> <!-- row -->
+							
+						</fieldset> <!-- base info -->
+						
+						<fieldset>
+							<legend>Work Info</legend>
+							
+							
+						</fieldset>
+						
+					</form>
+					
+					<form action="" method="POST">
+						<fieldset>
+							<legend>Notes</legend>
+						</fieldset>
+						
 						<div class="form-group">
-							<label>First Name</label>
-							<input type="text" class="form-control" id="first_name" name="first_name"
-								value = "<?=$customer['first_name'] ?>"
-							/>
+							<label>New Note</label>
+							<textarea class="form-control" rows="5" name="note" placeholder="Add new note..."></textarea>
 						</div>
+						
 						<div class="form-group">
-							<label>Last Name</label>
-							<input type="text" class="form-control" id="last_name" name="last_name"
-								value = "<?=$customer['last_name'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Email</label>
-							<input type="text" class="form-control" id="email" name="email"
-								value = "<?=$customer['email'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Degree</label>
-							<input type="text" class="form-control" id="degree" name="degree"
-								value = "<?=$customer['degree'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Major</label>
-							<input type="text" class="form-control" id="major" name="major"
-								value = "<?=$customer['major'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>School</label>
-							<input type="text" class="form-control" id="school" name="school"
-								value = "<?=$customer['school'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Type</label>
-							<select name="type" class="form-control" id="type">
-								<option val="alumni"
-									<?php if ($customer['type'] == 'alumni') echo "selected"; ?>
-								>Alumni</option>
-								<option val="current"
-									<?php if ($customer['type'] == 'current') echo "selected"; ?>
-								>Current</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label>Salutation</label>
-							<input type="text" class="form-control" id="salutation" name="salutation"
-								value = "<?=$customer['salutation'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Preferred Mail Name</label>
-							<input type="text" class="form-control" id="preferred_mail_name" name="preferred_mail_name"
-								value = "<?=$customer['preferred_mail_name'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Active</label>
-							<input type="checkbox" class="form-control" id="active" name="active"
-								<?php if ($customer['active']) echo "checked"; ?>
-							/>
-						</div>
-						<div class="form-group">
-							<label>Home Street 1</label>
-							<input type="text" class="form-control" id="home_street_1" name="home_street_1"
-								value = "<?=$customer['home_street_1'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Home Street 2</label>
-							<input type="text" class="form-control" id="home_street_2" name="home_street_2"
-								value = "<?=$customer['home_street_2'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Country</label>
-							<input type="text" class="form-control" id="country" name="country"
-								value = "<?=$customer['country'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>City</label>
-							<input type="text" class="form-control" id="city" name="city"
-								value = "<?=$customer['city'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>State</label>
-							<input type="text" class="form-control" id="state" name="state"
-								value = "<?=$customer['state'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Zipcode</label>
-							<input type="text" class="form-control" id="zipcode" name="zipcode"
-								value = "<?=$customer['zipcode'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Home Number</label>
-							<input type="text" class="form-control" id="home_number" name="home_number"
-								value = "<?=$customer['home_number'] ?>"
-							/>
-						</div>
-						<div class="form-group">
-							<label>Phone Number</label>
-							<input type="text" class="form-control" id="phone_number" name="phone_number"
-								value = "<?=$customer['phone_number'] ?>"
-							/>
+							<label>Previous Notes</label>
+							
 						</div>
 					</form>
 				</div>
