--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -19,7 +19,15 @@
 
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
+	<link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+	
+	<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+	
+	<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
+
     <link href="<?=Helper::url('/media/css/dashboard.css')?>" rel="stylesheet" />
+
+	<script src="<?=Helper::url('/media/js/alumni_single.js')?>"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -182,7 +190,7 @@
 						
 					</form>
 					
-					<form action="" method="POST">
+					<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>/note" method="POST">
 						<fieldset>
 							<legend>Notes</legend>
 						</fieldset>
@@ -193,8 +201,31 @@
 						</div>
 						
 						<div class="form-group">
+							<input type="hidden" name="user_id" value="1" />
+						
+							<button type="submit" class="btn btn-primary">Add note</button>
+						</div>
+						
+						<div class="form-group">
 							<label>Previous Notes</label>
-							
+							<table class="table table-striped" id="data_table">
+							  <thead>
+								<tr>
+									<th>Created at</th>
+									<th>Note</th>
+								</tr>
+							  </thead>
+							  <tbody>
+								<?php if (isset($notes) && $notes->num_rows > 0): ?>
+								<?php while ($note=$notes->fetch_assoc()): ?>
+									<tr>
+										<td><?=$note['created_at']?></td>
+										<td><?=$note['note']?></td>
+									</tr>
+								<?php endwhile; ?>
+								<?php endif; ?>
+							  </tbody>
+							</table>
 						</div>
 					</form>
 				</div>
