Email send and view complete.

--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -29,6 +29,12 @@
 
 	<script src="<?=Helper::url('/media/js/alumni_single.js')?>"></script>
 
+	<style>
+		fieldset {
+			margin-bottom: 5%;
+		}
+	</style>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
