--- a/templates/alumni-single.phtml
+++ b/templates/alumni-single.phtml
@@ -355,6 +355,28 @@
 				</div>
 			</div>
         
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">User access token</div>
+						
+						<div class="panel-body">
+							<form action="<?=Helper::url('/api/v1/customer/'.$customer['id_customer'])?>/token" method="POST">
+								<div class="form-group">
+									<input class="form-control" type="text" name="token" value="<?=$customer['token']?>" readonly />
+								</div>
+								<div class="form-group">
+									<button class="btn btn-primary" type="submit">Generate new token</button>
+								</div>
+								<div class="form-group">
+									<a class="btn btn-default" href="#"><i class="fa fa-envelope"></i> Send user update email</a>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+        
         </div>
       </div>
     </div>
